// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`response encoding void response emits 204 with empty body 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { ServerOperation } from "@typespex/runtime/server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  ErrorEncoders,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeJsonBody,
} from "@typespex/runtime/server";
import * as ServerHints from "./server-hints.js";

const ItemsInput = {
  remove: RequestDecoders.path("itemId", Decoders.string).map((itemId) => ({ itemId })),
};

const ItemsOutput = {
  remove: ResponseEncoders.empty(204),
};

const ItemsErrors = {
  remove: ErrorEncoders.json<never>(500),
};

export const ItemsOperations = {
  remove: {
    endpoint: {
      service: { name: "VoidApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "remove",
        operationId: "Items.remove",
        method: "DELETE" as const,
        path: "/items/:itemId",
        hints: emptyHints(),
      },
    },
    decodeInput: (request, pathParams) =>
      decodeRequestInput<{ itemId: string }>(ItemsInput.remove, request, pathParams),
    encodeOutput: () => ItemsOutput.remove.encode(undefined),
    encodeError: (error: never) => ItemsErrors.remove.encode(error),
  } satisfies ServerOperation<{ itemId: string }, never, void>,

} as const;
"
`;

exports[`response encoding void response emits 204 with empty body 2`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { MatchedRequestContext, OperationHandler } from "@typespex/runtime/server";
export interface ItemsServer<Ctx = MatchedRequestContext> {
  readonly remove: OperationHandler<{ itemId: string }, never, void, Ctx>;
}

export interface VoidApiServer<Ctx = MatchedRequestContext> {
  readonly Items: ItemsServer<Ctx>;
}
"
`;

exports[`response encoding array response types 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { MatchedRequestContext, OperationHandler } from "@typespex/runtime/server";
import type {
  Tag
} from "./models.js";

export interface TagsServer<Ctx = MatchedRequestContext> {
  readonly list: OperationHandler<Record<string, never>, never, Tag[], Ctx>;
  readonly create: OperationHandler<Tag, never, Tag, Ctx>;
}

export interface ArrayApiServer<Ctx = MatchedRequestContext> {
  readonly Tags: TagsServer<Ctx>;
}
"
`;

exports[`response encoding array response types 2`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

export interface Tag {
  name: string;
  count: number;
}
"
`;

exports[`response encoding enum and union types in models 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

export interface Pet {
  id: string;
  name: string;
  kind: "dog" | "cat" | "bird";
  tag?: string;
}

export interface NotFoundError {
  code: "NOT_FOUND";
  message: string;
}

export type PetKind = "dog" | "cat" | "bird";
"
`;

exports[`response encoding response @header properties become HTTP headers 1`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

import type { ServerOperation } from "@typespex/runtime/server";
import {
  Either,
  createHints,
  emptyHints,
  ResponseEncoders,
  ErrorEncoders,
  Decoders,
  RequestDecoders,
  Validators,
  decodeRequestInput,
  decodeRequestInputAndBody,
  decodeJsonBody,
} from "@typespex/runtime/server";
import * as ServerHints from "./server-hints.js";
import type { RateLimitedResponse } from "./models.js";

const DataOutput = {
  fetch: ResponseEncoders.jsonWithHeaders<RateLimitedResponse>(200, [["rateLimit", "x-rate-limit"], ["requestId", "x-request-id"]]),
};

const DataErrors = {
  fetch: ErrorEncoders.json<never>(500),
};

export const DataOperations = {
  fetch: {
    endpoint: {
      service: { name: "HeadersApi", hints: emptyHints() },
      namespaces: [],
      operation: {
        name: "fetch",
        operationId: "Data.fetch",
        method: "GET" as const,
        path: "/data",
        hints: emptyHints(),
      },
    },
    decodeInput: () =>
      Either.right({} as Record<string, never>),
    encodeOutput: (output: RateLimitedResponse) => DataOutput.fetch.encode(output),
    encodeError: (error: never) => DataErrors.fetch.encode(error),
  } satisfies ServerOperation<Record<string, never>, never, RateLimitedResponse>,

} as const;
"
`;

exports[`response encoding response @header properties become HTTP headers 2`] = `
"// AUTO-GENERATED by @typespex/emitter — do not edit

export interface RateLimitedResponse {
  data: string;
}
"
`;
